--- a/roles/repos/tasks/main.yml
+++ b/roles/repos/tasks/main.yml
@@ -3,7 +3,8 @@
   - name: "Add GPG keys from keyserver"
     apt_key: keyserver={{item.keyserver}} id={{item.id}}
     with_items:
-      - { keyserver: keyserver.ubuntu.com, id: BBEBDCB318AD50EC6865090613B00F1FD2C19886}
+      - {keyserver: keyserver.ubuntu.com, id: BBEBDCB318AD50EC6865090613B00F1FD2C19886}
+      - {keyserver: p80.pool.sks-keyservers.net, id: 58118E89F3A912897C070ADBF76221572C52609D}
 
   - name: "Add GPG keys from URL"
     apt_key: url={{item}} state=present
@@ -19,7 +20,7 @@
 
   - name: "Add repositories from PPA"
     apt_repository: repo={{item}}
-    #apt_repository: repo={{item}} codename={{ansible_lsb.codename}}
     with_items:
       - 'ppa:ansible/ansible'
+      - 'ppa:team-xbmc/ppa'
   become: true
