add darktable from PPA

--- a/roles/repos/tasks/main.yml
+++ b/roles/repos/tasks/main.yml
@@ -25,4 +25,5 @@
       - 'ppa:ansible/ansible'
       - 'ppa:peterlevi/ppa'
       - 'ppa:team-xbmc/ppa'
+      - 'ppa:pmjdebruijn/darktable-release'
   become: true
