--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -23,6 +23,7 @@
     - virtualbox-5.1
     - variety
     - variety-slideshow
+    - darktable
     - docker-engine
     - docker-compose
   become: true
