--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -5,14 +5,18 @@
   with_items:
     - xfonts-terminus
     - vim
+    - curl
     - htop
     - network-manager-openconnect
-    - libpython-dev
+    - network-manager-openconnect-gnome
+    - wireguard
+    - libpython3-dev
     - mc
     - vlc
     - kodi
     - calibre
     - fbreader
+    - guake
   become: true
 
 - name: Install required packages from additional repos
@@ -20,11 +24,11 @@
     {{ ansible_pkg_mgr }} name={{ item }} state=present
   with_items:
     - spotify-client
-    - virtualbox-5.1
+    - virtualbox-6.1
     - variety
-    - variety-slideshow
+    #- variety-slideshow
     - darktable
-    - docker-engine
+    - docker-ce
     - docker-compose
   become: true
 
